--- a/week1/readme
+++ b/week1/readme
@@ -1,6 +1,136 @@
 # data-structure-lab
-1.write a C Program for Linear Search using non-recursion
+1.write a C Program for Linear Search using non-recursion  #include<stdio.h>
+     int linear_search(int n,int a[50], int key)
+     {
+               int i,pos=-1;
+               for(i=0;i<n;i++)
+               {
+                         if(a[i]==key)
+                         {
+                          pos=i;
+                          break;
+                          }
+                 }
+                 return pos;
+       }
+       int main()
+       {
+                 int i,pos,n,key,a[50];
+                 scanf("%d",&n);
+                  for(i=0;i<n;i++)
+                 scanf("%d",&a[i]);
+                  scanf("%d',&key);
+                  pos=linear_search(n,a,key);
+                  if(pos==-1)
+                  printf("Element not present");
+                  else
+                  printf("Element present at %d location",pos+1);
+       }
+
+
 2.Write a C Program for Linear Search using recursion
+#include<stdio.h>
+int linear_search(int n,int a[50],int key)
+{
+        static int i;//i=0;
+        if(a[i] == key)
+        {
+                    return i;
+         }
+         else if (i<n)
+         {
+                  i++;
+                  linear_search(n,a,key);
+          }
+          else
+                        return -1;
+}
+int main()
+{
+            int i,pos,n,key,a[50];
+            scanf("%d",&n);
+            for(i=0;i<n;i++)
+            scanf("%d",&a[i]);
+            scanf("%d",&key);
+            pos=linear_search(n,a,key);
+            if(pos==-1)
+            printf("Element not present")
+            else
+           printf("Element present at %d location",pos+1);
+}
+
 3.Write a C Program for Binary Search using non-recursion
+#include<stdio.h>
+int binary_search(int first,int last,int a[50],int key)
+{ 
+            int pos=-1,mid;
+            while(first<=last)
+            {
+                                   mid=(first+last)/2;
+                      if(a[mid]==key)
+                     {
+                                  pos=mid;
+                               break;
+                          }
+                          else if(a[mid]<key)
+                                      first=mid+1;
+                            else
+                                       last=mid-1;
+                }
+                 return pos;
+}
+int main()
+{
+           int i,pos,n,key,a[50];
+            scanf("%d",&n);
+            for(i=0;i<n;i++)
+            scanf("%d",&a[i]);
+            scanf("%d",&key);
+            pos=binary_search(0,n-1,a,key);
+            if(pos==-1)
+            printf("Element not present")
+            else
+           printf("Element present at %d location",pos+1);
+}
+
+
+
+
+
+
+
 4.Write a C Program for Binary Search using recursion
+
+int binary_search(int first,int last,int a[50], int key)
+{
+         int pos=-1,mid;
+         while(first<=last)
+         {
+                                  mid=(first+last)/2;
+                 if(a[mid]==key)
+                 {
+                       pos=mid;
+                        break;
+                  }
+                  else if(a[mid]<key)
+                                first=mid=1;
+                   else
+                                last=mid-1;
+           }
+}
+int main()
+{   
+           int i,pos,n,key,a[50];
+            scanf("%d",&n);
+            for(i=0;i<n;i++)
+            scanf("%d",&a[i]);
+            scanf("%d",&key);
+            pos=binary_search(0,n-1,a,key);
+            if(pos==-1)
+            printf("Element not present")
+            else
+           printf("Element present at %d location",pos+1);
+}
+
+
 
